# xonshit

./: .gitignore  .xonshrc  .xonshrc~  README.md  pyproject.toml
root-filesystem/etc/skel/.config/xonsh/: rc.xsh
xonshit/: README.md  pytest.ini  runner.py
xonshit/testing/: test_runner.py
