# https://poetry.eustace.io/docs/pyproject/
[tool.poetry]
name = "xonshit"
version = "0.1.1"
description = "xonsh community environment similar to bash-it"
authors = ["Mike Carifio <mike@carif.io>"]
license = "MIT"
readme = "xonshit/README.md"
homepage = "https://www.github.com/mcarifio/xonsh-it"
vcs = "git"
# include
# exclude

[tool.poetry.dependencies]
python = "^3.7"
# cleo?
xonsh = "^0.8.9"
poetry = "^0.12.11"
prompt_toolkit = "^2.0"
fire = "^0.1.3"
pytest = "^4.1"
hypothesis = "^4.4"
distro = {version = "^1.3",platform = "Linux"}

[tool.poetry.dev-dependencies]
# poetry add --dev --allow-prereleases black
# https://black.readthedocs.io/en/stable/
black = {version = "^18.3-alpha.0",allows-prereleases = true}

# poetry add --dev pypiserver
# https://pypi.org/project/pypiserver/#quickstart-installation-and-usage
pypiserver = "^1.2"
passlib = "^1.7"


# poetry add --dev --optional xonsh
# https://xon.sh/index.html
xonsh = {version = "^0.8.9",optional = true}


[tool.poetry.scripts]
# See xonshit.runner for the dispatch function, which will select the right function based on
# it's name, e.g. `echo`. First two are for debugging and tests purposes

# poetry run echo one two three
echo = "xonshit.runner:echo"
# poetry run say say it now
say = "xonshit.runner:say"
testing = "xonshit.runner:testing"


[[tool.poetry.source]]
name = "xonshit"
url = "http://localhost:9090/"
username = "xonshit"
password = "xonshit"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
