# https://poetry.eustace.io/docs/pyproject/
[tool.poetry]
name = "xonshit"
version = "0.1.1"
description = "xonsh community environment similar to bash-it"
authors = ["Mike Carifio <mike@carif.io>"]
license = "MIT"
readme = "xonshit/README.md"
homepage = "https://www.github.com/mcarifio/xonsh-it"
include = "doc"
# exclude

[tool.poetry.dependencies]
python = "^3.7"
# cleo?
fusepy = "^3.0.1"
poetry = "^0.12.11"
prompt_toolkit = "^2.0"
fire = "^0.1.3"
pytest = "^4.1"
hypothesis = "^4.4"
distro = {version = "^1.3",platform = "Linux"}

[tool.poetry.dev-dependencies]
# poetry add --dev --allow-prereleases black
# https://black.readthedocs.io/en/stable/
black = {version = "^18.3-alpha.0",allows-prereleases = true}

# poetry add --dev pypiserver
# https://pypi.org/project/pypiserver/#quickstart-installation-and-usage
pypiserver = "^1.2"
passlib = "^1.7"

# poetry add --dev --optional xonsh
# https://xon.sh/index.html
xonsh = {version = "^0.8.9",optional = true}





[tool.poetry.scripts]
# See xonshit.runner for the dispatch function, which will select the right function based on
# it's name, e.g. `echo`. First two are for debugging and tests purposes

echo = "xonshit.runner:echo"
"echo.poetry.usage" = "poetry run xonshit.runner:echo one two three"
"echo.python.usage" = "python -m xonshit.runner echo one two three"

# poetry run say say it now
say = "xonshit.runner:say"

testing = "xonshit.runner:testing"

# To use a local pypiserver, swithch the definition next and uncomment out [tool.poetry.source] array item.
# pypiserver = "pyproject.bin.pypiserver:run"
pypiserver = "xonshit.runner:pypiserver"

tomlck = "xonshit.runner:tomlck"

#[[tool.poetry.source]]
#name = "xonshit"
#url = "http://localhost:9090"
#username = "xonshit"
#password = "xonshit"

# custom values, unused
#directory = "project/build/resources/pypiserver/packages"
#htpasswd = "project/build/resources/pypiserver/htpasswd.txt"
#verbose = 1
#overwrite = 1

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


# Custom project meta data, don't know how I'll use it yet
[tool.project]
vcs = "ssh://git@github.com/mcarifio/xonshit.git"
direct = "git+ssh://git@github.com/mcarifio/xonshit.git" # @sometag#egg=SomeDependency"

